; ModuleID = '/home/carl/AnghaBench/zstd/lib/deprecated/extr_zbuff_compress.c_ZBUFF_compressInit_advanced.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/deprecated/extr_zbuff_compress.c_ZBUFF_compressInit_advanced.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZSTD_CONTENTSIZE_UNKNOWN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZBUFF_compressInit_advanced(i32* %0, i8* %1, i64 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %11 = load i64, i64* %10, align 8
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %5
  %14 = load i64, i64* @ZSTD_CONTENTSIZE_UNKNOWN, align 8
  store i64 %14, i64* %10, align 8
  br label %15

15:                                               ; preds = %13, %5
  %16 = load i32*, i32** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load i64, i64* %8, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i64, i64* %10, align 8
  %21 = call i64 @ZSTD_initCStream_advanced(i32* %16, i8* %17, i64 %18, i32 %19, i64 %20)
  ret i64 %21
}

declare dso_local i64 @ZSTD_initCStream_advanced(i32*, i8*, i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
